# cg

lw1/Letters/: CMakeLists.txt  main.cpp
lw1/Letters/Controller/: Simulation.cpp  Simulation.h
lw1/Letters/Model/: Letter.cpp  Letter.h
lw1/Letters/View/: LetterView.cpp  LetterView.h
lw2/Painter/: CMakeLists.txt  main.cpp
lw2/Painter/Controller/: AppController.cpp  AppController.h
lw2/Painter/Model/: Canvas.cpp  Canvas.h
lw2/Painter/View/: AppView.cpp  AppView.h
lw2/Viewer/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
lw2/Viewer/Controller/: AppController.cpp  AppController.h  Application.cpp  Application.h  ImageController.cpp  ImageController.h
lw2/Viewer/Model/: Image.cpp  Image.h  Menu.cpp  Menu.h  ViewerSettings.h  WindowSettings.cpp  WindowSettings.h
lw2/Viewer/Model/Observable/: Observable.cpp  Observable.h
lw2/Viewer/Utils/: PipeDescriptor.cpp  PipeDescriptor.h  PipeWrapper.cpp  PipeWrapper.h
lw2/Viewer/View/: BackgroundView.cpp  BackgroundView.h  ImageView.cpp  ImageView.h  MenuView.cpp  MenuView.h
lw2/Viewer/View/Observer/: IObserver.h
lw2/Viewer/docs/: CLASS_DIAGRAM.md
